--- a/docs/api/qiskit/qiskit.transpiler.TranspileLayout.mdx
+++ b/docs/api/qiskit/qiskit.transpiler.TranspileLayout.mdx
@@ -16,8 +16,27 @@ python_api_name: qiskit.transpiler.TranspileLayout
   The [`transpiler`](transpiler#module-qiskit.transpiler "qiskit.transpiler") is unitary-preserving up to the “initial layout” and “final layout” permutations. The initial layout permutation is caused by setting and applying the initial layout during the [Layout Stage](transpiler#layout-stage). The final layout permutation is caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate") insertion during the [Routing Stage](transpiler#routing-stage). This class provides an interface to reason about these permutations using a variety of helper methods.
 
   During the layout stage, the transpiler can potentially remap the order of the qubits in the circuit as it fits the circuit to the target backend. For example, let the input circuit be:
+  ```python
+  from qiskit.circuit import QuantumCircuit, QuantumRegister
+  qr = QuantumRegister(3, name="MyReg")
+  qc = QuantumCircuit(qr)
+  qc.h(0)
+  qc.cx(0, 1)
+  qc.cx(0, 2)
+  qc.draw("mpl")
+  ```
 
   Suppose that during the layout stage the transpiler reorders the qubits to be:
+      
+  ```python
+  from qiskit import QuantumCircuit
+
+  qc = QuantumCircuit(3)
+  qc.h(2)
+  qc.cx(2, 1)
+  qc.cx(2, 0)
+  qc.draw("mpl")
+  ```
 
   Then the output of the [`initial_virtual_layout()`](#qiskit.transpiler.TranspileLayout.initial_virtual_layout "qiskit.transpiler.TranspileLayout.initial_virtual_layout") method is equivalent to:
 
