Update title metadata

--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -261,7 +261,7 @@
   }
  ],
  "metadata": {
-  "description": "Explanation of error mitigation techniques available through Qiskit Runtime",
+  "description": "Explanation of error mitigation and suppression techniques available through Qiskit Runtime",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -279,7 +279,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Error mitigation techniques"
+  "title": "Error mitigation and suppression techniques"
  },
  "nbformat": 4,
  "nbformat_minor": 5
