update with new blog post

--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -8,7 +8,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 *Last updated 26 June 2024*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
-Keep up with the latest and greatest from Qiskit and IBM Quantum! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
+Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
 
 ## Latest release summaries
 
@@ -18,7 +18,7 @@ Keep up with the latest and greatest from Qiskit and IBM Quantum! Gathered here 
 
 *To see the release notes for all versions, visit the [Qiskit SDK release notes](/api/qiskit/release-notes).*
 
-Qiskit SDK v1.1.0 has arrived, marking the first minor version release of the Qiskit SDK’s first major version. On the IBM Quantum&trade; blog, we review some of the key highlights — including top new features and improvements, as well as some important deprecations. Read the blog [here](https://www.ibm.com/quantum/blog/qiskit-1-1-release-summary).
+Qiskit SDK v1.1.0 has arrived, marking the first minor version release of the Qiskit SDK’s first major version. On the IBM Quantum blog, we review some of the key highlights — including top new features and improvements, as well as some important deprecations. Read the blog [here](https://www.ibm.com/quantum/blog/qiskit-1-1-release-summary).
 
 The updates and improvements include the following:
 
@@ -91,19 +91,19 @@ Probabilistic error amplification (PEA) error mitigation method is now available
 The `optimization_level` option is deprecated for Estimator V2 and will be removed no sooner than 30 September 2024.
 
 
-## Qiskit blog: How execution modes enable efficient, utility-scale workloads 
+## IBM Quantum blog: Defining — and citing — the Qiskit SDK
+
+*Browse all blogs at the [IBM Quantum blog page](https://www.ibm.com/quantum/blog).*
 
 {/* Bring over the Quantum news (blog) announcement post */}
 
-*Browse all blogs at the [Quantum Research blog page](https://www.ibm.com/quantum/blog).*
+Since its original launch in 2017, researchers have used the Qiskit SDK to write thousands of papers in quantum information science and engineering. However, those researchers have also lacked a definitive, authoritative academic citation that explains what the Qiskit SDK and how it enables their experiments—at least, not until now.
 
-In a recent post on the IBM Quantum&trade; blog, we introduce three new and improved execution modes that make running utility-scale workloads more reliable, more predictable, and more efficient than ever before.
+[“Quantum computing with Qiskit,”](https://arxiv.org/abs/2405.08810) a paper published recently on arXiv, fills this gap by providing the research community with a succinct overview of the SDK’s architecture and core components. It also offers fascinating insight into the design philosophy that has informed the Qiskit SDK’s development since its earliest days, and delivers a detailed, end-to-end example of a workflow that uses Qiskit to solve a challenging problem in condensed matter physics.
 
-Execution modes are the rules and procedures that govern how a user’s quantum circuits run on classical and quantum resources. When IBM put the first quantum computer in the cloud in 2016, users could only execute circuits as individual jobs. Since then, we’ve been working to see how execution modes can optimize the user experience even further.
+The authors of “Quantum computing with Qiskit” include developers who helped build the very first version of Qiskit back in 2017, and who have seen firsthand how it has grown into the sophisticated, versatile tool it is today. Their hope is that the paper will serve as a convenient, citable source that helps researchers better understand what Qiskit is and how it is used for quantum information science.
 
-After previewing them at the IBM Quantum Summit, we're thrilled to share more details on three execution modes that give users more flexibility in choosing how their circuits should be grouped together or divided up for optimal execution. These include **job mode** for running standalone jobs, **batch mode** for running non-iterative multi-job workloads, and **session mode** for running iterative workloads as a single experiment.
-
-For more details on the new and improved execution modes, including example code that demonstrates batch mode and session mode, see [the full blog post](https://www.ibm.com/quantum/blog/execution-modes).
+For more details on the new paper, including key takeaways and example citations, be sure to read [our recent post on the IBM Quantum blog](https://www.ibm.com/quantum/blog/defining-and-citing-the-qiskit-sdk), or read [the full paper on arXiv](https://arxiv.org/abs/2405.08810).
 
 ## What's new in the documentation
 
