--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -308,6 +308,16 @@ Due to differences in the device compilation process, certain runtime features c
 
 </Tabs>
 
+|                          | fractional gates                                                  | dynamic circuits                                                                          | Gate-folding ZNE                                                                                    | PEA                                                               | PEC                                                               | dynamical decoupling                                              | pulse gates (Eagle only)                                                                                | gate twirling                                                                                                                                                     |
+|--------------------------|-------------------------------------------------------------------|-------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------|-------------------------------------------------------------------|-------------------------------------------------------------------|-------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| fractional gates         |                                                                   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                       | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                                                                                   |
+| dynamic circuits         | ![Incompatible](/images/run/runtime-options-overview/error.svg)   |                                                                                           | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                     | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) (Non-conditional gates)                                                                         |
+| Gate-folding ZNE         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           |                                                                                                     | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Limitations](/images/run/runtime-options-overview/warning.svg) (Might not work with custom gates<br>) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
+| PEA                      | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                     |                                                                   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
+| PEC                      | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                     | ![Incompatible](/images/run/runtime-options-overview/error.svg)   |                                                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
+| dynamical decoupling     | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) |                                                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                       | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                                                                                 |
+| pulse gates (Eagle only) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Incompatible](/images/run/runtime-options-overview/error.svg)                           | ![Limitations](/images/run/runtime-options-overview/warning.svg) (Might not work with custom gates) | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) |                                                                                                         | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) <br>![Limitations](/images/run/runtime-options-overview/warning.svg) (Clifford entanglers only) |
+| gate twirling            | ![Incompatible](/images/run/runtime-options-overview/error.svg)   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) (Non-conditional gates) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg)                                   | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Compatible](/images/run/runtime-options-overview/checkmark.svg) | ![Limitations](/images/run/runtime-options-overview/warning.svg) (Clifford entanglers only)             |                                                                                                                                                                   |
 
 ## V2 changes
 Options are specified differently in the V2 primitives in these ways:
