--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -136,7 +136,7 @@ Scroll to see the full table.
   <TabItem value="EstimatorV2" label="Estimator V2">
 | Options              | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|
-| default_shots        |                          |                         |  integer in the range[0, `backend.max_shots`]                                             | `4096`                      |
+| default_shots        |                          |                         |  integer in the range[0, `backend.max_shots`]                                             | None                      |
 | default_precision    |                          |                         |  float > 0                                                                                        | `0.015625 (1 / sqrt(4096))`     |
 | dynamical_decoupling |                          |                         |                                                                                           |                                              |
 |                      | enable                   |                         | `True`/`False`                                                             |    `False`           |
@@ -152,7 +152,8 @@ Scroll to see the full table.
 |                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.                                | Given by `backend.default_rep_delay`.|
 | max_execution_time   |                          |                         | integer number of seconds in the range  [1, 10800]                                            | `10800` (3 hours)                         |
 | optimization_level   |                          |                         | `0`/`1`                                                                                       | `1`                         |
-| resilience           | LayerNoiseLearning       |                         | `True`/`False`                                                                                | `True`                      |
+| [resilience](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptions)           |                          |                         |                                                                                              |                      |
+|                      | LayerNoiseLearning       |                         | `True`/`False`                                                                                | `True`                      |
 |                      |                          | max_layers_to_learn     |  `None`/ integer >= 1                                                                            | `4`                    |
 |                      |                          | shots_per_randomization |  integer >= 1                                                                         |  `128`                    |
 |                      |                          | num_randomizations      |   integer >= 1                                                                                |  `32`                    |
@@ -174,11 +175,10 @@ Scroll to see the full table.
 |                      | seed_simulator           |                         |   integer                                                                               | `None`                    |
 |                      | coupling_map             |                         |  List of directed two-qubit interactions                                                | full connectivity                   |
 |                      | basis_gates              |                         |  List of basis gate names to unroll to                                                  | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |
-| transpilation        | skip_transpilation       |                         | `True`/`False`                                                                                      | `False`                     |
-|                      | initial_layout           |                         |                                                                                         |                         |
-| twirling             | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
+| twirling             |                          |                         |                                                                                             |                       |
+|                      | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
-|                      | num_randomizations       |                         |  `auto`/ integer >= 1 (Note that this value strongly influences execution time.)            | `'auto'`                    |
+|                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                         | `'auto'`                    |
 |                      | shots_per_randomization  |                         |   `auto`/ integer >= 1 and <= `backend.max_shots`.                                                                      | `'auto'`                    |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
   </TabItem>
@@ -186,16 +186,31 @@ Scroll to see the full table.
   <TabItem value="SamplerV2" label="Sampler V2">
 | Options              | Sub-options              | Sub-sub-options         | Choices                                                                                   | Default                   |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|
-| default_shots        |                          |                         |                                                                                           | `4096`                      |
-| optimization_level   |                          |                         | `0`/`1`                                                                                       | `1`                         |
-| dynamical_decoupling | enable                   |                         |`True`/`False`                                                                                           |`False`                           |
+| default_shots        |                          |                         |  integer in the range[0, `backend.max_shots`]                                             | `4096`                      |
+| dynamical_decoupling |                          |                         |                                                                                           |                                              |
+|                      | enable                   |                         | `True`/`False`                                                             |    `False`           |
 |                      | sequence_type            |                         | `'XX'`/`'XpXm'`/`'XY4'`                                                                         | `'XX'`                      |
 |                      | extra_slack_distribution |                         | `'middle'`/`'edges'`                                                                          | `'middle'`                  |
 |                      | scheduling_method        |                         | `'asap'`/`'alap'`                                                                            | `'alap'`                    |
-| twirling             | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
+| environment          |                          |                         |                                                                                                         |                                  |
+|                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                                                              |`WARNING`                          |
+|                      | callback                 |                         |Callable function that receives Job ID and Job result.                                                   |`None`                           |
+|                      | job_tags                 |                         |List of tags                                                                                             |`None`                           |
+| execution            |                          |                         |                                                                                                         |                           |
+|                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |
+|                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.                                | Given by `backend.default_rep_delay`.|
+| max_execution_time   |                          |                         | integer number of seconds in the range  [1, 10800]                                            | `10800` (3 hours)                         |
+| optimization_level   |                          |                         | `0`/`1`                                                                                       | `1`                         |
+| simulator            |                          |                         |                                                                                   |                     |
+|                      | noise_model              |                         |   [Qiskit Aer NoiseModel](../verify/building_noise_models), or its representation        | `None`                      |
+|                      | seed_simulator           |                         |   integer                                                                               | `None`                    |
+|                      | coupling_map             |                         |  List of directed two-qubit interactions                                                | full connectivity                   |
+|                      | basis_gates              |                         |  List of basis gate names to unroll to                                                  | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |
+| twirling             |                          |                         |                                                                                            |                        |
+|                      | enable_gates             |                         | `True`/`False`                                                                                      | `False`                     |
 |                      | enable_measure           |                         | `True`/`False`                                                                                      | `True`                      |
-|                      | num_randomizations       |                         |                                                                                           | `'auto'`                    |
-|                      | shots_per_randomization  |                         |                                                                                           | `'auto'`                    |
+|                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                          | `'auto'`                    |
+|                      | shots_per_randomization  |                         |   `auto`/ integer >= 1 and <= `backend.max_shots`.                                                                      | `'auto'`                    |
 |                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |
 
   </TabItem>
