--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -5,7 +5,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
-*Last updated 26 June 2024*
+*Last updated 27 June 2024*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
 Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
@@ -97,11 +97,11 @@ The `optimization_level` option is deprecated for Estimator V2 and will be remov
 
 {/* Bring over the Quantum news (blog) announcement post */}
 
-Since its original launch in 2017, researchers have used the Qiskit SDK to write thousands of papers in quantum information science and engineering. However, those researchers have also lacked a definitive, authoritative academic citation that explains what the Qiskit SDK and how it enables their experiments — at least, not until now.
+Since its launch in 2017, researchers have used the Qiskit SDK to write thousands of papers in the fields of quantum information science and engineering. However, those researchers have also lacked a definitive, authoritative academic citation that explains what the Qiskit SDK and how it enables their experiments —  until now.
 
 [“Quantum computing with Qiskit,”](https://arxiv.org/abs/2405.08810) a paper published recently on arXiv, fills this gap by providing the research community with a succinct overview of the SDK’s architecture and core components. It also offers fascinating insight into the design philosophy that has informed the Qiskit SDK’s development since its earliest days, and delivers a detailed, end-to-end example of a workflow that uses Qiskit to solve a challenging problem in condensed matter physics.
 
-The authors of “Quantum computing with Qiskit” include developers who helped build the very first version of Qiskit back in 2017, and who have seen firsthand how it has grown into the sophisticated, versatile tool it is today. Their hope is that the paper will serve as a convenient, citable source that helps researchers better understand what Qiskit is and how it is used for quantum information science.
+The authors of “Quantum computing with Qiskit” include developers who helped build the very first version of Qiskit in 2017, and who have seen firsthand how it has grown into the sophisticated, versatile tool it is today. Their hope is that the paper will serve as a convenient, citable source that helps researchers better understand what Qiskit is and how it is used for quantum information science.
 
 For more details on the new paper, including key takeaways and example citations, be sure to read [our recent post on the IBM Quantum blog](https://www.ibm.com/quantum/blog/defining-and-citing-the-qiskit-sdk), or read [the full paper on arXiv](https://arxiv.org/abs/2405.08810).
 
