--- a/docs/run/advanced-runtime-options.mdx
+++ b/docs/run/advanced-runtime-options.mdx
@@ -9,7 +9,7 @@ description: Specify options when building with Qiskit Runtime primitives
 When calling the primitives, you can pass in options by using an options class or a dictionary. In the options classes, commonly used options, such as `resilience_level`, are at the first level. Other options are grouped into different categories, such as `execution`. See the [options classes section](#options-classes) for details.
 
 <Admonition type="caution" title="Important">
-To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  See the [transpilation documentation](../transpile) for instructions to transform circuits.  Due to this change, the primitives will no longer perform layout or routing operations.  Consequently, transpilation options referring to those tasks will no longer have any effect. By default, all primitives except Sampler V2 still optimize the input circuits. To bypass all optimization, set `optimization_level=0`.
+To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  See the [transpilation documentation](../transpile) for instructions to transform circuits.  Due to this change, the primitives will no longer perform layout or routing operations.  Consequently, transpilation options referring to those tasks will no longer have any effect.
 
 *Exception*: When you initialize the Qiskit Runtime Service with the Q-CTRL channel strategy (example below), abstract circuits are still supported.
 
@@ -206,25 +206,7 @@ For more information about the primitive options, refer to the
 
 The Qiskit Runtime primitives expect to be called with circuits already suitable for execution on the target system. This implies that the user has already transpiled their circuits to respect the native gate set and connectivity constraints of the target system.
 
-The Qiskit Runtime primitives may perform additional runtime compilation to optimize circuits, with the degree of optimization controlled by an optimization level option. The optimization level you choose affects the compilation strategy, with higher levels invoking more expensive or aggressive optimizations.
-
-See the Optimization level table in the
-[Runtime compilation topic](configure-runtime-compilation#set-the-optimization-level) for further details.
-
-<Tabs>
-  <TabItem value="PrimV2" label="Estimator V2">
-   The optimization level option is a "first-level option".  Sampler V2 does not currently support `optimization_level`.
-
-```python
-from qiskit_ibm_runtime import EstimatorV2 as Estimator
-
-estimator = Estimator(mode=backend, options={"optimization_level": 1})
-
-# or..
-estimator.options.optimization_level = 1
-```
-
-To turn off all optional runtime compilation steps, you must set `optimization_level=0`.  V2 primitives do not support any advanced transpilation options.
+V2 primitives do not support any advanced transpilation options.
   </TabItem>
 
   <TabItem value="PrimV1" label="V1 primitives">
